--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.4.2",
     "react-swipeable-views": "^0.12.16",
     "resolve": "1.6.0",
+    "rxjs": "^6.2.2",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
