--- a/web/package.json
+++ b/web/package.json
@@ -38,8 +38,11 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
+    "react-d3-speedometer": "^0.3.3",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
+    "react-odometer": "github:dearfrankg/react-odometer",
+    "react-odometerjs": "^2.1.0",
     "react-swipeable-views": "^0.12.16",
     "resolve": "1.6.0",
     "rxjs": "^6.2.2",
